# AnyEngine

./: .gitignore  CMakeLists.txt  README.md
android/: local.properties
android/app/: build.gradle
cmake/: plugins.cmake  shaders.cmake
config/: config-generic.sh  config-ios-xcode.sh  config-mac-xcode.sh  config-tvos-xcode.sh  config-visionos-xcode.sh  config-web-unix.sh  config-web-win.bat  config-win.bat
src/: CMakeLists.txt  app.cc  app.h  main.cc  main.cpp
src/base/: CMakeLists.txt  decl.h  error.h  plugin.h  plugin_defs.h
src/fs/: CMakeLists.txt  error.h  file.cc  file.h  path.cc  path.h
src/gui/: CMakeLists.txt  error.h  fps_counter.cc  fps_counter.h  renderer.cc  renderer.h
src/io/: CMakeLists.txt  error.h  file.cc  file.h
src/render/: CMakeLists.txt  api.h  api_plugin.h  api_plugin_import.h  api_plugin_internal.h  error.h  fps_counter.h  geometry.h  geometry_transferer.h  gui.h  object.h  object_parser.h  object_parser_plugin.h  object_parser_plugin_import.h  texture.h  texture_mapper.h  texture_transferer.h
src/render/apis/: CMakeLists.txt
src/render/apis/gl/: CMakeLists.txt  api.cc  api.h  api_plugin.cc  buffer.h  check.cc  check.h  context.cc  context.h  error.cc  error.h  gui.cc  gui.h  handle.h  loader.h  object.cc  object.h  shader.cc  shader.h  shaders.h  shaders.in.cc  texture.cc  texture.h  texture_mapper.h  window.h
src/render/apis/gl/shaders/: simple.frag  simple.vert
src/render/apis/vk/: CMakeLists.txt  api.cc  api.h  api_plugin.cc  buffer.cc  buffer.h  command.cc  command.h  descriptor.cc  descriptor.h  device.cc  device.h  error.h  framebuffer.cc  framebuffer.h  gui.cc  gui.h  handle.h  image.cc  image.h  instance.cc  instance.h  object.cc  object.h  queue.cc  queue.h  render.cc  render.h  sampler.cc  sampler.h  shader.cc  shader.h  shaders.h  shaders.in.cc  surface.cc  surface.h  swapchain.cc  swapchain.h  sync.cc  sync.h  (+2 more)
src/render/apis/vk/shaders/: simple.frag  simple.vert
src/render/mappers/: CMakeLists.txt
src/render/mappers/mock/: CMakeLists.txt  texture_mapper.h
src/render/mappers/sdl/: CMakeLists.txt  error.h  texture_mapper.cc  texture_mapper.h
src/render/parsers/: CMakeLists.txt
src/render/transferers/: CMakeLists.txt
src/render/transferers/sdl/: CMakeLists.txt  error.h  texture_transferer.cc  texture_transferer.h
src/resource/: CMakeLists.txt  scope_exit.h
src/sdl/: CMakeLists.txt  error.h  render3d.cc  render3d.h
src/sdl/gui/: CMakeLists.txt  gui.cc  gui.h
src/sdl/image/: CMakeLists.txt  convert.h  error.h  texture_mapper.cc  texture_mapper.h  texture_mapper_mock.h
src/sdl/renderer/: CMakeLists.txt  renderer.h
src/sdl/renderer/gl/: CMakeLists.txt  error.h  gui.cc  gui.h  impl.cc  impl.h  texture_mapper.cc  texture_mapper.h  window.cc  window.h
src/sdl/renderer/vk/: CMakeLists.txt  error.h  gui.cc  gui.h  impl.cc  impl.h  texture_mapper.cc  texture_mapper.h  window.cc  window.h
